--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       </h1>
 
       <nav>
-        <a href="">Inicio</a>
-        <a href="">Empleos</a>
+        <!-- <a href="#" target="_blank" rel="noopener noreferrer">Inicio</a> -->
+        <a href="empleos.html">Empleos</a>
       </nav>
 
       <div>
         <a href="">Publicar un empleo</a>
-        <a href="">Iniciar sesión</a>
+        <!-- <a href="">Iniciar sesión</a> -->
       </div>
     </header>
 
@@ -47,27 +47,29 @@
         </p>
 
         <form action="" role="search">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="1"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="icon icon-tabler icons-tabler-outline icon-tabler-search"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
-            <path d="M21 21l-6 -6" />
-          </svg>
-          <input
-            type="text"
-            placeholder="Buscar empleos por titulo, habilidad o empresa"
-          />
-          <button type="submit">Buscar</button>
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="1"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-search"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+              <path d="M21 21l-6 -6" />
+            </svg>
+            <input
+              type="text"
+              placeholder="Buscar empleos por titulo, habilidad o empresa"
+            />
+            <button type="submit">Buscar</button>
+          </div>
         </form>
       </section>
 
@@ -145,4 +147,4 @@
   </body>
 </html>
 
-<!--:p-->
+<!--Congratulations, i guess-->
