--- a/empleos.html
+++ b/empleos.html
@@ -8,7 +8,9 @@
       descripcion="Listado con empleos y filtros para encontrar el trabajo ideal como desarrollador."
     />
     <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="./script.js"></script>
     <title>DevJobs - Empleos</title>
+    
   </head>
 
   <body>
@@ -95,9 +97,9 @@
             <select name="location" id="filter-location">
               <option value="">Ubicación</option>
               <option value="remoto">Remoto</option>
-              <option value="cdmx">Ciudad de México</option>
-              <option value="guadalajara">Guadalajara</option>
-              <option value="monterrey">Monterrey</option>
+              <option value="panama">Ciudad de Panamá</option>
+              <option value="buenosaires">Buenos Aires</option>
+              <option value="bogota">Bogotá</option>
               <option value="barcelona">Barcelona</option>
             </select>
 
@@ -110,13 +112,15 @@
             </select>
           </div>
         </form>
+
+        <span id="filter-selected-value"></span>
       </section>
 
       <section>
         <h2>Resultados de búsqueda</h2>
 
         <div class="jobs-listings">
-          <article class="job-listing-card">
+          <article data-modalidad="remoto" class="job-listing-card">
             <div>
               <h3>Ingeniero de Software</h3>
               <small>Tech Solutions Inc. | Remoto</small>
@@ -132,10 +136,10 @@
             </button>
           </article>
 
-          <article class="job-listing-card">
+          <article data-modalidad="panama" class="job-listing-card">
             <div>
               <h3>Analista de Datos</h3>
-              <small>Data Driven Co. | Ciudad de México</small>
+              <small>Data Driven Co. | Ciudad de Panamá</small>
               <p>
                 Estamos buscando un analista de datos con experiencia en el
                 manejo de grandes conjuntos de datos y herramientas de
@@ -145,10 +149,10 @@
             <button class="button-apply-job">Aplicar</button>
           </article>
 
-          <article class="job-listing-card">
+          <article data-modalidad="buenosaires" class="job-listing-card">
             <div>
               <h3>Desarrollador de Aplicaciones Móviles</h3>
-              <small>Mobile Apps Ltd. | Guadalajara</small>
+              <small>Mobile Apps Ltd. | Buenos Aires</small>
               <p>
                 Buscamos un desarrollador de aplicaciones móviles con
                 experiencia en iOS y/o Android. El candidato debe tener
@@ -159,7 +163,7 @@
             <button class="button-apply-job">Aplicar</button>
           </article>
 
-          <article class="job-listing-card">
+          <article data-modalidad="remoto" class="job-listing-card">
             <div>
               <h3>Ingeniero de DevOps</h3>
               <small>Cloud Services SA | Remoto</small>
