--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevJobs</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="./script.js"></script>
   </head>
   <body>
     <header>
