--- a/empleos.html
+++ b/empleos.html
@@ -97,9 +97,9 @@
             <select name="location" id="filter-location">
               <option value="">Ubicación</option>
               <option value="remoto">Remoto</option>
-              <option value="panama">Ciudad de Panamá</option>
-              <option value="buenosaires">Buenos Aires</option>
-              <option value="bogota">Bogotá</option>
+              <option value="cdmx">Ciudad de Mexico</option>
+              <option value="guadalajara">Guadalajara</option>
+              <option value="monterrey">Monterrey</option>
               <option value="barcelona">Barcelona</option>
             </select>
 
@@ -120,67 +120,12 @@
         <h2>Resultados de búsqueda</h2>
 
         <div class="jobs-listings">
-          <article data-modalidad="remoto" class="job-listing-card">
-            <div>
-              <h3>Ingeniero de Software</h3>
-              <small>Tech Solutions Inc. | Remoto</small>
-              <p>
-                Buscamos un ingeniero de software con experiencia en desarrollo
-                web y conocimientos en JavaScript, React y Node.js. El candidato
-                ideal debe ser capaz de trabajar en equipo y tener buenas
-                habilidades de comunicación.
-              </p>
-            </div>
-            <button class="button-apply-job" id="boton-importante">
-              Aplicar
-            </button>
-          </article>
-
-          <article data-modalidad="panama" class="job-listing-card">
-            <div>
-              <h3>Analista de Datos</h3>
-              <small>Data Driven Co. | Ciudad de Panamá</small>
-              <p>
-                Estamos buscando un analista de datos con experiencia en el
-                manejo de grandes conjuntos de datos y herramientas de
-                visualización. Se requiere conocimiento en SQL, Python y R.
-              </p>
-            </div>
-            <button class="button-apply-job">Aplicar</button>
-          </article>
-
-          <article data-modalidad="buenosaires" class="job-listing-card">
-            <div>
-              <h3>Desarrollador de Aplicaciones Móviles</h3>
-              <small>Mobile Apps Ltd. | Buenos Aires</small>
-              <p>
-                Buscamos un desarrollador de aplicaciones móviles con
-                experiencia en iOS y/o Android. El candidato debe tener
-                conocimientos en Swift, Kotlin y el desarrollo de interfaces de
-                usuario.
-              </p>
-            </div>
-            <button class="button-apply-job">Aplicar</button>
-          </article>
-
-          <article data-modalidad="remoto" class="job-listing-card">
-            <div>
-              <h3>Ingeniero de DevOps</h3>
-              <small>Cloud Services SA | Remoto</small>
-              <p>
-                Estamos buscando un ingeniero de DevOps con experiencia en la
-                gestión de infraestructuras en la nube, automatización de
-                procesos y herramientas de integración continua. Se requiere
-                conocimiento en AWS, Azure o GCP.
-              </p>
-            </div>
-            <button class="button-apply-job">Aplicar</button>
-          </article>
+          <!-- Las ofertas de empleo se insertan aquí dinámicamente -->
         </div>
 
         <nav class="pagination">
-          <a href="#"
-            ><svg
+          <a href="#">
+            <svg
               width="16"
               height="16"
               viewBox="0 0 24 24"
@@ -191,15 +136,16 @@
               stroke-linejoin="round"
             >
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M15 6l-6 6l6 6" /></svg
-          ></a>
+              <path d="M15 6l-6 6l6 6" />
+            </svg>
+          </a>
           <a class="is-active" href="#">1</a>
           <a href="#">2</a>
           <a href="#">3</a>
           <a href="#">4</a>
           <a href="#">5</a>
-          <a href="#"
-            ><svg
+          <a href="#">
+            <svg
               width="16"
               height="16"
               viewBox="0 0 24 24"
@@ -211,8 +157,9 @@
               class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-right"
             >
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M9 6l6 6l-6 6" /></svg
-          ></a>
+              <path d="M9 6l6 6l-6 6" />
+            </svg>
+          </a>
         </nav>
       </section>
     </main>
