js terminado (mas o menos)

--- a/empleos.html
+++ b/empleos.html
@@ -8,7 +8,7 @@
       descripcion="Listado con empleos y filtros para encontrar el trabajo ideal como desarrollador."
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./main.js"></script>
     <title>DevJobs - Empleos</title>
     
   </head>
@@ -37,8 +37,7 @@
       </nav>
 
       <div>
-        <a href="">Publicar un empleo</a>
-        <!-- <a href="">Iniciar sesión</a> -->
+        <devjobs-avatar></devjobs-avatar>
       </div>
     </header>
 
@@ -106,7 +105,7 @@
             <select name="experience-level" id="filter-experience-level">
               <option value="">Nivel de experiencia</option>
               <option value="junior">Junior</option>
-              <option value="mid">Mid-level</option>
+              <option value="mid-level">Mid-level</option>
               <option value="senior">Senior</option>
               <option value="lead">Lead</option>
             </select>
