--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevJobs</title>
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./main.js"></script>
   </head>
   <body>
     <header>
@@ -31,8 +31,7 @@
       </nav>
 
       <div>
-        <a href="">Publicar un empleo</a>
-        <!-- <a href="">Iniciar sesión</a> -->
+        <devjobs-avatar></devjobs-avatar>
       </div>
     </header>
 
