empezando la migracion a react

--- a/02-react/index.html
+++ b/02-react/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>02-react</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+      descripcion="Listado con empleos y filtros para encontrar el trabajo ideal como desarrollador."
+    />
+    <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="./main.js"></script>
+    <title>DevJobs - Empleos</title>
   </head>
   <body>
     <div id="root"></div>
