--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       descripcion="Listado con empleos y filtros para encontrar el trabajo ideal como desarrollador."
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./main.js"></script>
+    <!-- <script type="module" src="./main.js"></script> -->
     <title>DevJobs - Empleos</title>
   </head>
   <body>
